--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "view-story",
-  "homepage": "https://storyoffour.io",
+  "homepage": "https://julmedvedeva.github.io/view-story/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
